--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,12 +92,6 @@ hr{
 /* ---------------------
 ** Hero
 ---------------------- */
-.hero-content{
-
-}
-.hero-content .title{
-    
-}
 .hero-content .description{
     margin-bottom: 33px;
 }
@@ -115,21 +109,11 @@ hr{
 #brand{
     display: block;
 }
-.company-logo{
-    
-    
-}
 .company-logo .logos{
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.company-logo .logos li{
-    
-}
-.company-logo .logos li a{
-    
 }
 .company-logo .logos li a img{
     width: 100%;
@@ -140,9 +124,6 @@ hr{
 ---------------------- */
 #polular-collection{
     display: block;
-}
-.polular-collection{
-
 }
 .products{
     display: grid;
@@ -160,9 +141,6 @@ hr{
 .product img{
     width: 100%;
 }
-.product-details{
-
-}
 .product-details .title{
     color: #18191F;
     font-size: 28px;
@@ -175,9 +153,6 @@ hr{
     font-weight: 400;
     line-height: 36px;
     padding: 5px 0px;
-}
-.product-details .rating{
-    
 }
 .product-details .rating .filled{
     color: #FB8200;
@@ -213,9 +188,6 @@ hr{
     font-size: 38px;
     font-weight: 700;
     line-height: 60px;
-
-}
-.featured-section .content .description{
 
 }
 .featured-section .content .button{
@@ -308,4 +280,100 @@ hr{
     background-color: #fff;
 }
 
+
+/* --------------------
+** Media Query 
+---------------------*/
+
+/* Mobile Devices */
+@media only screen and (max-width:688px) {  
+    .container{
+        display: block;
+    
+    }
+    
+    
+  }
+
+/* Tablet Devices */
+@media only screen and (min-width: 688px) and (max-width:992px){
+    main{
+        display: block;
+        overflow: hidden;
+        width: 100%;
+    }
+    .container{
+        width: 100%;
+        padding: 50px 30px;
+        display: block;
+    
+    }
+    .hero-content .description{
+        margin-bottom: 33px;
+    }
+    .hero-feature-img{
+        float: none;
+        text-align: center;
+    }
+    .hero-feature-img img{
+        width: 50%;
+    }
+    #polular-collection{
+        display: block;
+        width: 100%;
+    }
+
+    .products{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap:30px;
+        padding: 0px 0px 40px 0px;
+    }
+    
+    /* ---------------------
+    ** Company Logo
+    ---------------------- */
+    #brand{
+        display: block;
+        width: 100%;
+    }
+    .company-logo .logos{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-row-gap:20px;
+    }
+    .company-logo .logos li a img{
+        width: 50%;
+    }
+
+    /* ---------------------
+    ** Featured Section
+    ---------------------- */
+    #featured{
+        display: block;
+        width: 100%;
+    }
+    .featured-section{
+        display: block;
+
+    }
+    .featured-section .feature-img img{
+        width: 85%;    
+    }
+    .featured-section .content{
+        display: block;
+        padding-right: 105px;
+        margin-top: 28px;
+    }
+
+    /* Blog */
+    .blog-area .box-area{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap:20px;
+        margin: 60px 0px 0px 0px;
+    }
+
+
+}
 
