--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,106 @@ hr{
         display: block;
     
     }
+    main{
+        display: block;
+        overflow: hidden;
+        width: 100%;
+    }
+    .container{
+        width: 100%;
+        padding: 50px 30px;
+        display: block;
+    
+    }
+    h1 {
+        font-size: 28px;
+        line-height: 40px;
+        margin: 0px;
+        text-align: center;
+    }
+    h2 {
+        font-size: 30px;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    /* ---------------------
+    ** Hero
+    ---------------------- */
+    .hero-content .description{
+        margin-bottom: 33px;
+    }
+    .hero-feature-img{
+        float: none;
+        text-align: center;
+        margin-top: 100px;
+    }
+    .hero-feature-img img{
+        width: 50%;
+    }
+    #polular-collection{
+        display: block;
+        width: 100%;
+    }
+
+    .products{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap:30px;
+        padding: 0px 0px 40px 0px;
+    }
+    
+    /* ---------------------
+    ** Company Logo
+    ---------------------- */
+    #brand{
+        display: block;
+        width: 100%;
+    }
+    .company-logo .logos{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-row-gap:20px;
+    }
+    .company-logo .logos li a img{
+        width: 50%;
+    }
+
+    /* ---------------------
+    ** Featured Section
+    ---------------------- */
+    #featured{
+        display: block;
+        width: 100%;
+    }
+    .featured-section{
+        display: block;
+
+    }
+    .featured-section .feature-img img{
+        width: 85%;    
+    }
+    .featured-section .content{
+        display: block;
+        padding-right: 105px;
+        margin-top: 28px;
+    }
+    .featured-section .content .title {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 40px;
+    }
+
+    /* Blog */
+    .blog-area .box-area{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap:20px;
+        margin: 60px 0px 0px 0px;
+    }
+    .blog-area .box-area .blogTwo {
+        margin: 0px;
+    }
     
     
   }
@@ -308,12 +408,17 @@ hr{
         display: block;
     
     }
+
+    /* ---------------------
+    ** Hero
+    ---------------------- */
     .hero-content .description{
         margin-bottom: 33px;
     }
     .hero-feature-img{
         float: none;
         text-align: center;
+        margin-top: 100px;
     }
     .hero-feature-img img{
         width: 50%;
